<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">散文随笔合集</string>
    
    <string name="mine">我的收藏</string>
    <string name="shoucangjia">收藏夹</string>
    <string name="lishijilu">历史记录</string>
    
    <string name="article_list">文章分类</string>
    <string name="dushijiqing">散文随笔</string>
    <string name="xiaoyuanchunse">优美散文</string>
    <string name="jiatingluanlun">抒情散文</string>
    <string name="xingaijiaohuan">爱情散文</string>
    <string name="renqijiaohuan">经典散文</string>
    <string name="gudianwuxia">伤感散文</string>
    
    <string name="home">首页</string>
    <string name="standard">Standard</string>
    <string name="search_hint">小说搜索</string>
    
    <string name="setting">设置</string>
    <string name="update">数据更新</string>
    <string name="delfavorite">清空收藏夹</string>
    <string name="delhistory">清空历史记录</string>
    <string name="fontAndBg">字体和背景</string>
    <string name="about">关于本应用</string>
    
    
    <string name="about_msg">&lt;b>散文随笔合集&lt;/b> 是一款开源免费app，
        在这个快节奏的生活中，希望能偶尔慢下脚步欣赏几篇散文，陶冶情操。本应用采用了一系列最前沿的开发技术，
        采用了Apache License Version 2.0开源协议。
        &lt;br>&lt;br>
        所有文章收录自http://www.duanwenxue.com/，本app只提供文章目录，不影响网站数据流量。文章所有权归duanwenxue和作者所有。
        &lt;br>&lt;br>
        如果喜欢，还望向您的朋友推荐。也算是对作者的鼓励。在此感谢大家了！</string>
    <string name="apache_license">&lt;b>网络色情小说合集 &lt;/b>&lt;br>
        \u00A9 2013 Zhipeng JIANG &lt;br>     严格遵守 Apache License Version 2.0开源协议.
        &lt;br>&lt;br>
        &lt;b>ActionBarSherlock &lt;/b>&lt;br>
        \u00A9 2012 Jake Wharton&lt;br>
        ActionBarSherlock is licensed under the Apache License Version 2.0.
        &lt;br>&lt;br>
        &lt;b>The Apache License Version 2.0&lt;/b>&lt;br>
        You may obtain a copy of the License at&lt;br>
        &lt;center>&lt;a href=\'http://www.apache.org/licenses/LICENSE-2.0\'>
                "http://www.apache.org/licenses/LICENSE-2.0&lt;/a>&lt;/center>&lt;br>
        Unless required by applicable law or agreed to in writing, 
        software distributed under the License is distributed on an 
        \'AS IS\' BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, 
        either express or implied. See the License for the specific 
        language governing permissions and limitations under the License.</string>
    
    <string name="properties">SlidingMenu Properties</string>
    <string name="general">General</string>
    <string name="viewpager">ViewPager</string>
    <string name="attach">Attach</string>
    <string name="title_bar">Title Bar Options</string>
    <string name="title_bar_slide">Sliding Title Bar</string>
    <string name="title_bar_content">Sliding Content Only</string>
    <string name="animations">Custom Animations</string>
    <string name="anim_zoom">Zoom</string>
    <string name="anim_scale">Scale</string>
    <string name="anim_fold">Fold</string>
    <string name="anim_slide">Slide Up</string>
    <string name="changing_fragments">Changing Fragments</string>
    <string name="responsive_ui">Responsive UI</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="left_and_right">Left and Right</string>
    <string name="github">GitHub</string>
    <string name="github_label">SlidingMenu on GitHub</string>
    <string name="what_is_this">What is this?</string>
    <string name="responsive_explanation">This is an example of a UI that responds well to device type. On phones, the menu will be placed inside a SlidingMenu, while on tablets the menu will be exposed alongside the content because we have enough room to always show it.</string>
    <string name="licenses">Licenses</string>
    <string name="contact">Contact</string>
    
    <string name="no_email">Sorry, I couldn\'t find any e-mail apps on your phone</string>
</resources>