<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/mine" >
        <Preference android:title="@string/shoucangjia" android:icon="@drawable/ic_favorite" />
        <Preference android:title="@string/lishijilu"  android:icon="@drawable/ic_history"/>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/article_list" >
        <Preference android:title="@string/dushijiqing" android:icon="@drawable/ic_folder"/>
        <Preference android:title="@string/xiaoyuanchunse" android:icon="@drawable/ic_folder"/>
        <Preference android:title="@string/jiatingluanlun" android:icon="@drawable/ic_folder"/>
        <Preference android:title="@string/xingaijiaohuan" android:icon="@drawable/ic_folder"/>
        <Preference android:title="@string/renqijiaohuan" android:icon="@drawable/ic_folder"/>
        <Preference android:title="@string/gudianwuxia" android:icon="@drawable/ic_folder"/>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/setting" >
        <Preference android:title="@string/update" android:icon="@drawable/ic_download"/>
        <Preference android:title="@string/delfavorite" android:icon="@drawable/ic_delete"/>
        <Preference android:title="@string/delhistory" android:icon="@drawable/ic_delete"/>
        <Preference android:title="@string/fontAndBg" android:icon="@drawable/ic_font"/>
        <Preference android:title="@string/about" android:icon="@drawable/ic_about"/>
    </PreferenceCategory>

</PreferenceScreen>